--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ function closeNav() {
 
   <center>
   <button type="submit">BOOK NOW</button>
-    <button class="btn">CALL US</button>
+    <button class="button">CALL US</button>
    </center>
 </section>
 </section>
