--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ function closeNav() {
 
   <center>
   <button type="submit">BOOK NOW</button>
-    <button class="button">CALL US</button>
+   <input type="button" class="button" value="CALL US">
    </center>
 </section>
 </section>
