--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ function closeNav() {
 
   <center>
   <button type="submit">BOOK NOW</button>
-   <input type="button" class="button" value="CALL US">
+   <button type="submit">CALL US</button>
    </center>
 </section>
 </section>
