--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function closeNav() {
 
 </center></p>
 
-<center><button class="red">BOOK NOW</button></center>
+<center><button type="submit">BOOK NOW</button></center>
 </section>
 
 <!--Plumbers-->
@@ -95,7 +95,7 @@ function closeNav() {
     <h1 >BEST  QUALITY</h1>
     <hr size="10px" width="100%" color="red" >
     <p>Company works with homeowners, contractors, realtors, and residential building managers to help maintain, upgrade, and repair properties</p>
-  <button class= "red">BOOK NOW</button>
+  <button type="submit">BOOK NOW</button>
   </div>
  </div>
 
@@ -153,8 +153,8 @@ function closeNav() {
 </p>
 
   <center>
-  <button class="red">BOOK NOW</button>
-   <button class="whitey">CALL US</button>
+  <button type="submit">BOOK NOW</button>
+   <button type="submit">CALL US</button>
    </center>
 </section>
 </section>
