--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function closeNav() {
 
 </center></p>
 
-<center><button type="submit">BOOK NOW</button></center>
+<center><input type="submit" value="BOOK NOW"></center>
 </section>
 
 <!--Plumbers-->
@@ -95,7 +95,8 @@ function closeNav() {
     <h1 >BEST  QUALITY</h1>
     <hr size="10px" width="100%" color="red" >
     <p>Company works with homeowners, contractors, realtors, and residential building managers to help maintain, upgrade, and repair properties</p>
-  <button type="submit">BOOK NOW</button>
+  <input type="submit" value="BOOK NOW">
+
   </div>
  </div>
 
@@ -153,7 +154,8 @@ function closeNav() {
 </p>
 
   <center>
-  <button type="submit">BOOK NOW</button>
+ <input type="submit" value="BOOK NOW">
+  <input type="button" value="CALL US">
    <button type="submit">CALL US</button>
    </center>
 </section>
